--- a/html-demos/styles.css
+++ b/html-demos/styles.css
@@ -1,5 +1,9 @@
-
 .my-style-3 {
     color: blueviolet;
     font-family: cursive;
+}
+
+.my-style-4 {
+    color: red;
+    font-family: monospace;
 }
